# gradcafe-updater

./: LICENSE  Makefile  README.md  gradcafe.py  pyproject.toml  results  run.py  univ.yaml
scripts/: post-commit
